# typelist_utils

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.py  sonar-project.properties  test_results.xml  vcpkg.json
.github/workflows/: build.yml  build_and_test.yml
conan/: clang_profile  import_conan.cmake
include/typelist_utils/: sort.hpp  tl.hpp  traits.hpp  utils.hpp
src/: main.cpp
test/: main.cpp  test_sort.cpp  test_utils.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
